static std::map<uintptr_t, std::string> vtable_map = {
    { 0x14291beb8, "FdpLogMessage.Vector" },
    { 0x14291bf28, "FdpLogMessage.LevelUpLog" },
    { 0x14291c008, "FdpLogMessage.UseMagicLog" },
    { 0x14291bf98, "FdpLogMessage.UseMagicLog_Use_magic_info_list" },
    { 0x14291c0e8, "FdpLogMessage.ActGestureLog" },
    { 0x14291c078, "FdpLogMessage.ActGestureLog_Use_gesture_info_list" },
    { 0x14291c158, "FdpLogMessage.BrokenEquipmentLog" },
    { 0x14291c238, "FdpLogMessage.UseItemLog" },
    { 0x14291c1c8, "FdpLogMessage.UseItemLog_Use_item_info_list" },
    { 0x14291c318, "FdpLogMessage.PurchaseItemLog" },
    { 0x14291c2a8, "FdpLogMessage.PurchaseItemLog_Purchase_item_info_list" },
    { 0x14291c3f8, "FdpLogMessage.GetItemLog" },
    { 0x14291c388, "FdpLogMessage.GetItemLog_Get_item_info_list" },
    { 0x14291c4d8, "FdpLogMessage.DropItemLog" },
    { 0x14291c468, "FdpLogMessage.DropItemLog_Throw_away_item_list" },
    { 0x14291c5b8, "FdpLogMessage.LeaveItemLog" },
    { 0x14291c548, "FdpLogMessage.LeaveItemLog_Set_item_info_list" },
    { 0x14291c698, "FdpLogMessage.SaleItemLog" },
    { 0x14291c628, "FdpLogMessage.SaleItemLog_Sale_item_info_list" },
    { 0x14291c778, "FdpLogMessage.AccessWarehouseLog" },
    { 0x14291c708, "FdpLogMessage.AccessWarehouseLog_Access_warehouse_info_list" },
    { 0x14291c858, "FdpLogMessage.StrengthenWeaponLog" },
    { 0x14291c7e8, "FdpLogMessage.StrengthenWeaponLog_Strengthen_weapon_info_list" },
    { 0x14291c938, "FdpLogMessage.RepairEquipmentLog" },
    { 0x14291c8c8, "FdpLogMessage.RepairEquipmentLog_Repair_equipment_info_list" },
    { 0x14291c9a8, "FdpLogMessage.EquipMagicLog" },
    { 0x14291ca18, "FdpLogMessage.ChaneEstusFlaskNumLog" },
    { 0x14291ca88, "FdpLogMessage.GlobalEventLog" },
    { 0x14291caf8, "FdpLogMessage.CreateBloodMessageLog" },
    { 0x14291cb68, "FdpLogMessage.EvaluateBloodMessageLog" },
    { 0x14291cbd8, "FdpLogMessage.VisitResultLog" },
    { 0x14291cc48, "FdpLogMessage.QuickMatchResultLog" },
    { 0x14291ccb8, "FdpLogMessage.QuickMatchEndLog" },
    { 0x14291cd28, "FdpLogMessage.ConvertSaveDataLog" },
    { 0x14291ce78, "FdpLogMessage.SystemOptionLog" },
    { 0x14291cd98, "FdpLogMessage.SystemOptionLog_Game_option_setting" },
    { 0x14291ce08, "FdpLogMessage.SystemOptionLog_Network_setting" },
    { 0x143a962c8, "Frpg2RequestMessage.ServerPing" },
    { 0x143a96338, "Frpg2RequestMessage.RequestMeasureUploadBandwidth" },
    { 0x143a963a8, "Frpg2RequestMessage.RequestMeasureUploadBandwidthResponse" },
    { 0x143a96418, "Frpg2RequestMessage.RequestMeasureDownloadBandwidth" },
    { 0x143a96488, "Frpg2RequestMessage.RequestMeasureDownloadBandwidthResponse" },
    { 0x143a964f8, "Frpg2RequestMessage.RequestBenchmarkThroughput" },
    { 0x143a96568, "Frpg2RequestMessage.RequestBenchmarkThroughputResponse" },
    { 0x143a965d8, "Frpg2RequestMessage.RequestGetAnnounceMessageList" },
    { 0x143a96648, "Frpg2RequestMessage.RequestGetAnnounceMessageListResponse" },
    { 0x143a966b8, "Frpg2RequestMessage.RequestGetOnlineShopItemList" },
    { 0x143a96728, "Frpg2RequestMessage.RequestGetOnlineShopItemListResponse" },
    { 0x143a970a8, "Frpg2RequestMessage.RequestCreateBloodstain" },
    { 0x143a97118, "Frpg2RequestMessage.DomainLimitData" },
    { 0x143a97188, "Frpg2RequestMessage.RequestGetBloodstainList" },
    { 0x143a971f8, "Frpg2RequestMessage.RequestGetBloodstainListResponse" },
    { 0x143a97268, "Frpg2RequestMessage.RequestGetDeadingGhost" },
    { 0x143a972d8, "Frpg2RequestMessage.RequestGetDeadingGhostResponse" },
    { 0x143a97948, "Frpg2RequestMessage.RequestCreateBloodMessage" },
    { 0x143a979b8, "Frpg2RequestMessage.RequestCreateBloodMessageResponse" },
    { 0x143a97a98, "Frpg2RequestMessage.RequestReCreateBloodMessageList" },
    { 0x143a97a28, "Frpg2RequestMessage.RequestReCreateBloodMessageList_Blood_message_info_list" },
    { 0x143a97b08, "Frpg2RequestMessage.RequestReCreateBloodMessageListResponse" },
    { 0x143a97b78, "Frpg2RequestMessage.RequestRemoveBloodMessage" },
    { 0x143a97be8, "Frpg2RequestMessage.LocatedBloodMessage" },
    { 0x143a97c58, "Frpg2RequestMessage.RequestReentryBloodMessage" },
    { 0x143a97cc8, "Frpg2RequestMessage.RequestReentryBloodMessageResponse" },
    { 0x143a97d38, "Frpg2RequestMessage.BloodMessageDomainLimitData" },
    { 0x143a97da8, "Frpg2RequestMessage.RequestGetBloodMessageList" },
    { 0x143a97e18, "Frpg2RequestMessage.RequestGetBloodMessageListResponse" },
    { 0x143a97e88, "Frpg2RequestMessage.RequestEvaluateBloodMessage" },
    { 0x143a97ef8, "Frpg2RequestMessage.RequestGetBloodMessageEvaluation" },
    { 0x143a97f68, "Frpg2RequestMessage.RequestGetBloodMessageEvaluationResponse" },
    { 0x143a98108, "Frpg2RequestMessage.RequestCreateGhostData" },
    { 0x143a98178, "Frpg2RequestMessage.RequestGetGhostDataList" },
    { 0x143a981e8, "Frpg2RequestMessage.RequestGetGhostDataListResponse" },
    { 0x143a98758, "Frpg2PlayerData.BonfireInfo" },
    { 0x143a987c8, "Frpg2PlayerData.DefenseInfo" },
    { 0x143a98838, "Frpg2PlayerData.CutRateInfo" },
    { 0x143a988a8, "Frpg2PlayerData.ResistanceInfo" },
    { 0x143a98918, "Frpg2PlayerData.Equipment" },
    { 0x143a98988, "Frpg2PlayerData.PlayerLocation" },
    { 0x143a989f8, "Frpg2PlayerData.LogInfo" },
    { 0x143a98a68, "Frpg2PlayerData.PlayData" },
    { 0x143a98ad8, "Frpg2PlayerData.StatsInfo" },
    { 0x143a98b48, "Frpg2PlayerData.PlayerStatus" },
    { 0x143a98bb8, "Frpg2PlayerData.AllStatus" },
    { 0x143a98c28, "Frpg2RequestMessage.RequestUpdatePlayerCharacter" },
    { 0x143a98c98, "Frpg2RequestMessage.RequestUpdatePlayerStatus" },
    { 0x143a99238, "Frpg2RequestMessage.MatchingParameter" },
    { 0x143a992a8, "Frpg2RequestMessage.RequestGetPlayerCharacter" },
    { 0x143a99318, "Frpg2RequestMessage.RequestGetPlayerCharacterResponse" },
    { 0x143a99388, "Frpg2RequestMessage.RequestGetLoginPlayerCharacter" },
    { 0x143a993f8, "Frpg2RequestMessage.RequestGetLoginPlayerCharacterResponse" },
    { 0x143a99468, "Frpg2RequestMessage.PlayerCharacterID" },
    { 0x143a994d8, "Frpg2RequestMessage.RequestGetPlayerCharacterList" },
    { 0x143a99548, "Frpg2RequestMessage.RequestGetPlayerCharacterListResponse" },
    { 0x143a995b8, "Frpg2RequestMessage.RequestUpdateLoginPlayerCharacter" },
    { 0x143a99628, "Frpg2RequestMessage.RequestUpdateLoginPlayerCharacterResponse" },
    { 0x143a99698, "Frpg2RequestMessage.RequestRegisterRankingData" },
    { 0x143a99708, "Frpg2RequestMessage.RequestGetRankingData" },
    { 0x143a99778, "Frpg2RequestMessage.RequestGetRankingDataResponse" },
    { 0x143a997e8, "Frpg2RequestMessage.RequestGetCharacterRankingData" },
    { 0x143a99858, "Frpg2RequestMessage.RequestGetCharacterRankingDataResponse" },
    { 0x143a998c8, "Frpg2RequestMessage.RequestCountRankingData" },
    { 0x143a99938, "Frpg2RequestMessage.RequestCountRankingDataResponse" },
    { 0x143a999a8, "Frpg2RequestMessage.RequestGetRightMatchingAreaResponse" },
    { 0x143a9a0b8, "Frpg2RequestMessage.RequestSendMessageToPlayers" },
    { 0x143a9a128, "Frpg2RequestMessage.RequestGetBreakInTargetList" },
    { 0x143a9a198, "Frpg2RequestMessage.RequestGetBreakInTargetListResponse" },
    { 0x143a9a208, "Frpg2RequestMessage.RequestBreakInTarget" },
    { 0x143a9a278, "Frpg2RequestMessage.PushRequestBreakInTarget" },
    { 0x143a9a2e8, "Frpg2RequestMessage.PushRequestAllowBreakInTarget" },
    { 0x143a9a358, "Frpg2RequestMessage.RequestRejectBreakInTarget" },
    { 0x143a9a3c8, "Frpg2RequestMessage.PushRequestRejectBreakInTarget" },
    { 0x143a9aae8, "Frpg2PlayerData.Vector" },
    { 0x143a9ab58, "Frpg2RequestMessage.SignInfo" },
    { 0x143a9abc8, "Frpg2RequestMessage.RequestNotifyRingBell" },
    { 0x143a9ac38, "Frpg2RequestMessage.RequestNotifyDisconnectSession" },
    { 0x143a9aca8, "Frpg2RequestMessage.KillerInfo" },
    { 0x143a9ad18, "Frpg2RequestMessage.KillEnemyInfo" },
    { 0x143a9ad88, "Frpg2RequestMessage.PartyMemberInfo" },
    { 0x143a9adf8, "Frpg2RequestMessage.RequestNotifyRegisterCharacter" },
    { 0x143a9ae68, "Frpg2RequestMessage.RequestNotifyDie" },
    { 0x143a9aed8, "Frpg2RequestMessage.RequestNotifyKillEnemy" },
    { 0x143a9af48, "Frpg2RequestMessage.RequestNotifyKillBoss" },
    { 0x143a9afb8, "Frpg2RequestMessage.RequestNotifyJoinMultiplay" },
    { 0x143a9b028, "Frpg2RequestMessage.RequestNotifyLeaveMultiplay" },
    { 0x143a9b098, "Frpg2RequestMessage.RequestNotifyCreateSignResult" },
    { 0x143a9b108, "Frpg2RequestMessage.RequestNotifySummonSignResult" },
    { 0x143a9b178, "Frpg2RequestMessage.RequestNotifyBreakInResult" },
    { 0x143a9b1e8, "Frpg2RequestMessage.RequestNotifyProtoBufLog" },
    { 0x143a9b8b8, "Frpg2RequestMessage.RequestGetVisitorList" },
    { 0x143a9b928, "Frpg2RequestMessage.RequestGetVisitorListResponse" },
    { 0x143a9b998, "Frpg2RequestMessage.PushRequestRemoveVisitor" },
    { 0x143a9ba08, "Frpg2RequestMessage.RequestVisit" },
    { 0x143a9ba78, "Frpg2RequestMessage.PushRequestVisit" },
    { 0x143a9bae8, "Frpg2RequestMessage.RequestRejectVisit" },
    { 0x143a9bb58, "Frpg2RequestMessage.PushRequestRejectVisit" },
    { 0x143a9cfe8, "Frpg2RequestMessage.SignDomainGetInfo" },
    { 0x143a9d058, "Frpg2RequestMessage.SignGetFlags" },
    { 0x143a9d0c8, "Frpg2RequestMessage.LocatedRitualMark" },
    { 0x143a9d138, "Frpg2RequestMessage.RitualMarkDomainLimit" },
    { 0x143a9d1a8, "Frpg2RequestMessage.QuickMatchRank" },
    { 0x143a9d288, "Frpg2RequestMessage.RequestSearchQuickMatch" },
    { 0x143a9d218, "Frpg2RequestMessage.RequestSearchQuickMatch_Map_id_list" },
    { 0x143a9d2f8, "Frpg2RequestMessage.RequestSearchQuickMatchResponse" },
    { 0x143a9d368, "Frpg2RequestMessage.RequestRegisterQuickMatch" },
    { 0x143a9d3d8, "Frpg2RequestMessage.RequestUnregisterQuickMatch" },
    { 0x143a9d448, "Frpg2RequestMessage.RequestUpdateQuickMatch" },
    { 0x143a9d4b8, "Frpg2RequestMessage.RequestJoinQuickMatch" },
    { 0x143a9d528, "Frpg2RequestMessage.RequestAcceptQuickMatch" },
    { 0x143a9d598, "Frpg2RequestMessage.RequestRejectQuickMatch" },
    { 0x143a9d608, "Frpg2RequestMessage.PushRequestJoinQuickMatch" },
    { 0x143a9d678, "Frpg2RequestMessage.PushRequestAcceptQuickMatch" },
    { 0x143a9d6e8, "Frpg2RequestMessage.PushRequestRejectQuickMatch" },
    { 0x143a9d758, "Frpg2RequestMessage.RequestCreateSign" },
    { 0x143a9d7c8, "Frpg2RequestMessage.RequestCreateSignResponse" },
    { 0x143a9d838, "Frpg2RequestMessage.RequestUpdateSign" },
    { 0x143a9d8a8, "Frpg2RequestMessage.RequestRemoveSign" },
    { 0x143a9d918, "Frpg2RequestMessage.RequestGetSignList" },
    { 0x143a9d988, "Frpg2RequestMessage.RequestGetSignListResponse" },
    { 0x143a9d9f8, "Frpg2RequestMessage.RequestSummonSign" },
    { 0x143a9da68, "Frpg2RequestMessage.RequestRejectSign" },
    { 0x143a9dad8, "Frpg2RequestMessage.PushRequestRemoveSign" },
    { 0x143a9db48, "Frpg2RequestMessage.PushRequestSummonSign" },
    { 0x143a9dbb8, "Frpg2RequestMessage.PushRequestRejectSign" },
    { 0x143a9dc28, "Frpg2RequestMessage.RequestCreateMark" },
    { 0x143a9dc98, "Frpg2RequestMessage.RequestCreateMarkResponse" },
    { 0x143a9dd08, "Frpg2RequestMessage.RequestRemoveMark" },
    { 0x143a9dd78, "Frpg2RequestMessage.RequestReentryMark" },
    { 0x143a9dde8, "Frpg2RequestMessage.RequestGetMarkList" },
    { 0x143a9de58, "Frpg2RequestMessage.RequestGetMarkListResponse" },
    { 0x143a9df38, "Frpg2RequestMessage.RequestSendQuickMatchStart" },
    { 0x143a9dec8, "Frpg2RequestMessage.RequestSendQuickMatchStart_Session_member_list" },
    { 0x143a9dfa8, "Frpg2RequestMessage.RequestSendQuickMatchResult" },
    { 0x143a9e018, "Frpg2RequestMessage.RequestSendQuickMatchResultResponse" },
    { 0x143a9fe58, "Frpg2RequestMessage.NRLoggingMessage" },
    { 0x143aa0718, "Frpg2RequestMessage.RequestQueryLoginServerInfo" },
    { 0x143aa0788, "Frpg2RequestMessage.RequestHandshake" },
    { 0x143aa07f8, "Frpg2RequestMessage.GetServiceStatus" },
    { 0x143aa0868, "Frpg2RequestMessage.GetServiceStatusResponse" },
    { 0x143aa08d8, "Frpg2RequestMessage.RequestWaitForUserLogin" },
    { 0x143aa0948, "Frpg2RequestMessage.RequestWaitForUserLoginResponse" },
    { 0x143aa1318, "Frpg2RequestMessage.RequestQueryLoginServerInfoResponse" },
    { 0x143cf4428, "Frpg2RequestMessage.RequestQueryLoginServerInfoForXboxOne" },
    { 0x143cf4498, "Frpg2RequestMessage.RequestHandshakeResponse" },
    { 0x143cf4508, "Frpg2RequestMessage.GetServiceStatusForXboxOne" },
    { 0x143cf4578, "Frpg2RequestMessage.LoginForXboxOne" },
    { 0x143cf45e8, "Frpg2RequestMessage.SocketOptionSetting" },
    { 0x143cf4658, "Frpg2RequestMessage.GetConnectGameServerPortIdResponse" },
    { 0x143cf46c8, "Frpg2RequestMessage.UserLogout" },
    { 0x143cf4738, "Frpg2RequestMessage.DateTime" },
    { 0x143cf47a8, "Frpg2RequestMessage.ManagementTextMessage" },
    { 0x143cf4818, "Frpg2RequestMessage.NRLogUploadRequest" },
    { 0x143cf4888, "Frpg2RequestMessage.RequestSendMessageToPlayersResponse" },
    { 0x143cf48f8, "Frpg2RequestMessage.RequestSendMessageToSelectLanguagePlayers" },
    { 0x143cf4968, "Frpg2RequestMessage.RequestSendMessageToSelectLanguagePlayersResponse" },
    { 0x143cf49d8, "Frpg2RequestMessage.RequestSendMessageToAllPlayers" },
    { 0x143cf4a48, "Frpg2RequestMessage.RequestSendMessageToAllPlayersResponse" },
    { 0x143cf4ab8, "Frpg2RequestMessage.RequestSendPlayerList" },
    { 0x143cf4b28, "Frpg2RequestMessage.NotifyClientServerInfoToPushServer" },
    { 0x143cf4b98, "Frpg2RequestMessage.PushLoginUserInfo" },
    { 0x143cf4c08, "Frpg2RequestMessage.NotifyLoginToPushServer" },
    { 0x143cf4c78, "Frpg2RequestMessage.NotifyLogoutToPushServer" },
    { 0x143cf4ce8, "Frpg2RequestMessage.RequestCheckLogin" },
    { 0x143cf4d58, "Frpg2RequestMessage.UserLoginInfo" },
    { 0x143cf4dc8, "Frpg2RequestMessage.RequestCheckLoginResponse" },
    { 0x143cf4e38, "Frpg2RequestMessage.RequestGetPlayerConnectGameServer" },
    { 0x143cf4ea8, "Frpg2RequestMessage.PlayerConnectServerInfo" },
    { 0x143cf4f18, "Frpg2RequestMessage.RequestGetPlayerConnectGameServerResponse" },
    { 0x143cf4f88, "Frpg2RequestMessage.RequestGetServerConnectTime" },
    { 0x143cf4ff8, "Frpg2RequestMessage.RequestGetServerConnectTimeResponse" },
    { 0x143cf5068, "Frpg2RequestMessage.RequestGetConnectionCount" },
    { 0x143cf50d8, "Frpg2RequestMessage.RequestGetConnectionCountResponse" },
    { 0x143cf5148, "Frpg2RequestMessage.RequestDisconnectUser" },
    { 0x143cf51b8, "Frpg2RequestMessage.RequestDisconnectAllUser" },
    { 0x143cf5228, "Frpg2RequestMessage.RequestSendMessageToPushClient" },
    { 0x143cf5298, "Frpg2RequestMessage.PushRequestHeader" },
    { 0x143cf5308, "Frpg2RequestMessage.RangedLimit" },
    { 0x143cf5378, "Frpg2RequestMessage.PlayerUserIDPair" },
    { 0x143cf53e8, "Frpg2RequestMessage.QuickMatchData" },
    { 0x143cf5458, "Frpg2RequestMessage.QuickMatchSearchResult" },
    { 0x143cf54c8, "Frpg2RequestMessage.JoinQuickMatchMessage" },
    { 0x143cf5538, "Frpg2RequestMessage.AcceptQuickMatchMessage" },
    { 0x143cf55a8, "Frpg2RequestMessage.RejectQuickMatchMessage" },
    { 0x143cf5618, "Frpg2RequestMessage.RemoveQuickMatchMessage" },
    { 0x143cf5688, "Frpg2RequestMessage.SignData" },
    { 0x143cf56f8, "Frpg2RequestMessage.GetSignResult" },
    { 0x143cf5768, "Frpg2RequestMessage.RemoveSignMessage" },
    { 0x143cf57d8, "Frpg2RequestMessage.SummonSignMessage" },
    { 0x143cf5848, "Frpg2RequestMessage.RejectSignMessage" },
    { 0x143cf58b8, "Frpg2RequestMessage.CachedSign" },
    { 0x143cf5928, "Frpg2RequestMessage.RitualMarkData" },
    { 0x143cf5998, "Frpg2RequestMessage.BonfireInfo" },
    { 0x143cf5a08, "Frpg2RequestMessage.DefenseInfo" },
    { 0x143cf5a78, "Frpg2RequestMessage.CutRateInfo" },
    { 0x143cf5ae8, "Frpg2RequestMessage.ResistanceInfo" },
    { 0x143cf5b58, "Frpg2RequestMessage.BloodstainInfo" },
    { 0x143cf5bc8, "Frpg2RequestMessage.PlayerCharacterData" },
    { 0x143cf5c38, "Frpg2RequestMessage.RequestUpdatePlayerCharacterResponse" },
    { 0x143cf5ca8, "Frpg2RequestMessage.BloodMessageData" },
    { 0x143cf5d18, "Frpg2RequestMessage.RequestRemoveBloodMessageResponse" },
    { 0x143cf5d88, "Frpg2RequestMessage.RequestEvaluateBloodMessageResponse" },
    { 0x143cf5df8, "Frpg2RequestMessage.BloodMessageEvaluationData" },
    { 0x143cf5e68, "Frpg2RequestMessage.PushRequestEvaluateBloodMessage" },
    { 0x143cf5ed8, "Frpg2RequestMessage.RequestCreateGhostDataResponse" },
    { 0x143cf5f48, "Frpg2RequestMessage.GhostData" },
    { 0x143cf5fb8, "Frpg2RequestMessage.RequestGetRegulationFile" },
    { 0x143cf6028, "Frpg2RequestMessage.RequestGetRegulationFileResponse" },
    { 0x143cf6098, "Frpg2RequestMessage.RegulationFileMessage" },
    { 0x143cf6108, "Frpg2RequestMessage.RegulationFileDiffData" },
    { 0x143cf6178, "Frpg2RequestMessage.RegulationFileUpdateMessage" },
    { 0x143cf61e8, "Frpg2RequestMessage.RegulationFileUpdatePushMessage" },
    { 0x143cf6258, "Frpg2RequestMessage.AnnounceMessageData" },
    { 0x143cf62c8, "Frpg2RequestMessage.AnnounceMessageDataList" },
    { 0x143cf6338, "Frpg2RequestMessage.RequestUpdatePlayerStatusResponse" },
    { 0x143cf63a8, "Frpg2RequestMessage.BreakInTargetData" },
    { 0x143cf6418, "Frpg2RequestMessage.PushRequestRemoveBreakInTarget" },
    { 0x143cf6488, "Frpg2RequestMessage.RequestBreakInTargetResponse" },
    { 0x143cf64f8, "Frpg2RequestMessage.RequestRejectBreakInTargetResponse" },
    { 0x143cf6568, "Frpg2RequestMessage.VisitorData" },
    { 0x143cf65d8, "Frpg2RequestMessage.RequestVisitResponse" },
    { 0x143cf6648, "Frpg2RequestMessage.RequestRejectVisitResponse" },
    { 0x143cf66b8, "Frpg2RequestMessage.RequestNotifyRingBellResponse" },
    { 0x143cf6728, "Frpg2RequestMessage.PushRequestNotifyRingBell" },
    { 0x143cf6798, "Frpg2RequestMessage.RequestNotifyDisconnectSessionResponse" },
    { 0x143cf6808, "Frpg2RequestMessage.RequestGetServerSidePlayerStatus" },
    { 0x143cf6878, "Frpg2RequestMessage.PlayerStatusUploadConfig" },
    { 0x143cf68e8, "Frpg2RequestMessage.PlayerInfoUploadConfigPushMessage" },
    { 0x143cf6958, "Frpg2RequestMessage.LoginClientInfo" },
    { 0x143cf69c8, "Frpg2RequestMessage.RankingData" },
    { 0x143cf6a38, "Frpg2RequestMessage.RankingRotationID" },
    { 0x143cf6aa8, "Frpg2RequestMessage.RankingRecordCount" },
    { 0x143cf6b18, "Frpg2RequestMessage.RankingDataPack" },
    { 0x143cf6b88, "Frpg2RequestMessage.RequestRegisterRankingDataResponse" },
    { 0x143cf6bf8, "Frpg2RequestMessage.RequestGetOnlineShopItemListResponse_Lineup" },
    { 0x143cf6c68, "Frpg2RequestMessage.RequestUnregisterQuickMatchResponse" },
    { 0x143cf6cd8, "Frpg2RequestMessage.RequestUpdateQuickMatchResponse" },
    { 0x143cf6d48, "Frpg2RequestMessage.RequestJoinQuickMatchResponse" },
    { 0x143cf6db8, "Frpg2RequestMessage.RequestAcceptQuickMatchResponse" },
    { 0x143cf6e28, "Frpg2RequestMessage.RequestRejectQuickMatchResponse" },
    { 0x143cf6e98, "Frpg2RequestMessage.RequestUpdateSignResponse" },
    { 0x143cf6f08, "Frpg2RequestMessage.RequestRemoveSignResponse" },
    { 0x143cf6f78, "Frpg2RequestMessage.RequestSummonSignResponse" },
    { 0x143cf6fe8, "Frpg2RequestMessage.RequestRejectSignResponse" },
    { 0x143cf7058, "Frpg2RequestMessage.RequestRemoveMarkResponse" },
    { 0x143cf70c8, "Frpg2RequestMessage.RequestReentryMarkResponse" },
    { 0x143cf7138, "Frpg2RequestMessage.LogCommonInfo" },
    { 0x143cf71a8, "Frpg2RequestMessage.RequestGetRightMatchingArea" },
    { 0x143cf7218, "Frpg2RequestMessage.RequestGetRightMatchingAreaResponse_Area_info" },
    { 0x143cf7288, "Frpg2RequestMessage.RequestGetCurrentRank" },
    { 0x143cf72f8, "Frpg2RequestMessage.RequestGetCurrentRankResponse" },
    { 0x143cf7368, "Frpg2RequestMessage.QuickMatchRankCache" },
    { 0x143cf73d8, "Frpg2RequestMessage.RequestPushSendQuickMatchStart" },
    { 0x143cf74b8, "Frpg2RequestMessage.QuickMatchSession" },
    { 0x143cf7448, "Frpg2RequestMessage.QuickMatchSession_Result_list" },
    { 0x143cf7528, "Frpg2RequestMessage.QuickMatchApologyPoint" },
    { 0x143cfabc8, "Frpg2PlayerData.DateTime" },
};